--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -10,6 +10,7 @@
                 <BSNav MarginEnd="Margins.Auto" MarginBottom="Margins.Small" Class="navbar-nav mx-auto">
                     <BSNavItem Url="">Inicio</BSNavItem>
                     <BSNavItem Url="playlists">Playlists</BSNavItem>
+                    <BSNavItem Url="musicas">Musicas</BSNavItem>
                 </BSNav>
                 <BSNav>
                     <BSNavItem Url="profile">Perfil</BSNavItem>
